[gd_scene load_steps=4 format=2]

[ext_resource path="res://environment/Mouse.gd" type="Script" id=1]
[ext_resource path="res://graphics/mouse.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[node name="Mouse" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Mouse" type="Sprite" parent="."]
modulate = Color( 0.726562, 0.726562, 0.726562, 1 )
position = Vector2( -8, 0 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="PickedTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="input_event" from="." to="." method="_on_Mouse_input_event"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="timeout" from="PickedTimer" to="." method="_on_PickedTimer_timeout"]
